<!--
  ~ Materialize - Materialize all those not material
  ~ Copyright (C) 2015  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name" translatable="false">Materialize-mod</string>
    <string name="app_name_debug" translatable="false">Materialize-mod (debug)</string>

    <string name="search">Search</string>
    <string name="search_hint">Search for app…</string>

    <string name="about">About</string>

    <string name="version" formatted="false">Version %s (%s)</string>
    <string name="fork_me_on_github">Fork Materialize on GitHub</string>
    <string name="libraries_used">Libraries used</string>

    <string name="update_available">New version %s is available</string>
    <string name="update_confirm">Download Now</string>
    <string name="update_cancel">Cancel</string>

    <string name="adjust_label_shape">Shape</string>
    <string name="adjust_label_padding">Padding</string>
    <string name="adjust_label_color">Color</string>
    <string name="adjust_label_filename">File Name</string>

    <string name="shape_square">Square</string>
    <string name="shape_round">Round</string>

    <string name="color_white">White</string>
    <string name="color_gradient">Auto fill</string>

    <string name="adjust_ok">Add to home screen</string>
    <string name="adjust_cancel">Cancel</string>
    <string name="adjust_save_file">Save to SD card</string>

    <string name="fail_stencil">Failed to load stencils</string>
    <string name="done">Icon is added to your home screen</string>

    <string name="done_save_file" formatted="false">Icon saved %s</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_save_file">Save icon file</string>
    <string name="settings_save_file_summary">Icon will be saved to SD card</string>
    <string name="settings_save_file_name">Use app name as file name</string>
    <string name="settings_save_file_name_summary_on">App name will be used as file name</string>
    <string name="settings_save_file_name_summary_off">Last part of package name will be used as file name</string>
    <string name="settings_save_location">Save location</string>
    <string name="settings_save_txt">Generate info that icon pack need</string>
    <string name="settings_save_txt_summary">Save to appfilter.txt</string>
    <string name="settings_clear">Clear</string>
    <string name="settings_clear_summary">Clear saved content</string>
    <string name="save_file">Save icon</string>
    <string name="write_file_denied">You denied storage permissions request.</string>

</resources>
